--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "k-sync-arango",
+	"name": "k-sync-arango-debug",
 	"version": "0.6.4",
 	"description": "ArangoDB database adapter for livedb",
 	"main": "index.js",
